<resources>
    <string name="app_name">Food App</string>
    <string name="start_button">Get Started</string>
    <string name="appDescr">Food Delivery App</string>
    <string name="appName">yalla-otlob</string>
    <string name="person_name">Hi,Youssef</string>
    <string name="info"><![CDATA[Order & Eat]]></string>
    <string name="search">Find Your Food</string>
    <string name="Delivery_info">Free Delivery</string>
    <string name="offer_Date">May 2 - June 10</string>
    <string name="order_btn">Order</string>
    <string name="categories">Categories</string>
    <string name="popular">Popular</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="title">Title</string>
    <string name="fee">Fee</string>
    <string name="add">+Add</string>
    <string name="desc">description</string>
    <string name="addToCart">Add to Cart</string>
    <string name="my_cart">My Cart</string>
    <string name="items_total">Items Total:</string>
    <string name="delivery_services">Delivery Services:</string>
    <string name="tax">Tax:</string>
    <string name="total">Total</string>
    <string name="total1">Total:</string>
    <string name="check_out">Check Out</string>
    <string name="your_cart_is_empty">Your Cart is Empty</string>
</resources>