<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.showDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titletext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/title"
                android:textAlignment="center"
                android:textColor="#373b54"
                android:textSize="24sp"
                tools:textStyle="bold" />

            <TextView
                android:id="@+id/priceTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="$"
                android:textAlignment="center"
                android:textColor="#ff5e00"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/pic"
                android:layout_width="match_parent"
                android:layout_height="313dp"
                app:srcCompat="@drawable/pizza" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/minBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/minus" />

                <TextView
                    android:id="@+id/numberOrderTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="16dp"
                    android:text="1"
                    android:textAlignment="center"
                    android:textColor="#373b54"
                    android:textStyle="bold"
                    tools:textSize="18sp" />

                <ImageView
                    android:id="@+id/plusBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/plus" />
            </LinearLayout>

            <TextView
                android:id="@+id/DescriptionTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/desc"
                android:textColor="#686767"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/addToCartBtn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:background="@drawable/orange_button"
        android:elevation="3dp"
        android:gravity="center"
        android:text="@string/addToCart"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:textSize="23sp"
        tools:textStyle="bold" />
</androidx.constraintlayout.widget.ConstraintLayout>